compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__let_exhaustiveness1.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1412
expression: "\npub fn main(b) {\n    let True = b\n    Nil\n}\n"

---
error: Not exhaustive pattern match
  ┌─ /src/one/two.gleam:3:5
  │
3 │     let True = b
  │     ^^^^^^^^^^^^

This case expression does not match all possibilities.
Each constructor must have a pattern that matches it or
else it could crash.

These values are not matched:

  - False

